--- a/blocks/element/__heart/element__heart.css
+++ b/blocks/element/__heart/element__heart.css
@@ -1,3 +1,6 @@
 .element__heart {
-    background: url(/images/heart.svg);
+    position: relative;
+    float: right;
+    margin: 0;
+    padding: 0;
 }
