--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -2,4 +2,8 @@
     overflow: hidden;
     width: 282px;
     height: 282px;
+    margin: 0;
+    padding: 0;
+    border-radius: 5px 5px 0 0;
+    bottom: -2px;
 }
