--- a/blocks/element/__item/element__item.css
+++ b/blocks/element/__item/element__item.css
@@ -1,5 +1,5 @@
 .element__item {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
     border-radius: 5px;
+    margin: 0;
+    padding: 0;
 }
