--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -2,11 +2,16 @@
 @import url(../element/__title/element__title.css);
 @import url(../element/__heart/element__heart.css);
 @import url(../element/__image/element__image.css);
+@import url(../element/__container/element__container.css);
 
 .element {
-    min-height: 300px;
-    max-width: 350px;
-    margin: 0 auto;
+    width: 100%;
+    list-style: none;
+    display: flex;
     position: relative;
-    list-style-type: none;
-}
+  }
+  
+  .element:hover {
+    cursor: pointer;
+  }
+  
