--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -3,7 +3,7 @@
     line-height: 29.05px;
     color: #000;
     margin: 0;
-    text-align: left;
+    padding: 0;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
