--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -12,3 +12,11 @@
     cursor: pointer;
     right: 0;
 }
+
+@media screen and (max-width: 425px){
+    .profile__add-button {
+      width: 100%;
+      margin-top: 30px;
+      background-size: 16px 16px;
+    }
+  }
