--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,15 +3,20 @@
 @import url(../profile/__data/profile__data.css);
 @import url(../profile/__description/profile__description.css);
 @import url(../profile/__edit-button/profile__edit-button.css);
-@import url(../profile/__info/profile__info.css);
+@import url(../profile/__container/profile__container.css);
 @import url(../profile/__name/profile__name.css);
-
 .profile {
     display: flex;
+    flex-wrap: wrap;
     position: relative;
     min-width: 252px;
     max-width: 880px;
-    height: 120px;
-    margin: 0 200px 0;
+    margin: auto;
     padding: 0;
+}
+
+@media screen and (max-width: 425px) {
+    .profile {
+        flex-direction: column;
+    }
 }
