--- a/pages/index.css
+++ b/pages/index.css
@@ -5,5 +5,6 @@
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/element/element.css);
 @import url(../blocks/elements/elements.css);
+@import url(../blocks/modal/modal.css);
 @import url(../blocks/form/form.css);
 @import url(../blocks/footer/footer.css);
