--- a/blocks/modal/__btn-close/modal__btn-close.css
+++ b/blocks/modal/__btn-close/modal__btn-close.css
@@ -2,7 +2,9 @@
     height: 40px;
     width: 40px;
     background: url(/images/close-icon.svg) center no-repeat;
-    float: right;
-    background-color: rgba(0, 0, 0, 0);
-    padding: 30px;
+    position: absolute;
+    top: -47px;
+    right: -47px;
+    background-color: unset;
+    border: 0;
 }
