--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -2,6 +2,11 @@
     font-size: 18px;
     line-height: 21.78px;
     color: #545454;
-    margin: 0;
-    padding: 0;
+    margin: auto;
+}
+
+@media screen and (max-width: 480px) {
+    .footer__copyright {
+        max-width: 170px;
+    }
 }
