--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,9 +1,19 @@
 .profile__description {
-    margin: 16px 0 0 30px;
+    margin: 0 0 0 30px;
     padding: 0;
     max-width: 400px;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 16.94px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+@media screen and (max-width: 480px) {
+    .profile__occupation {
+        margin-bottom: 32px;
+        align-self: center;
+        max-width: calc(100vw - 70px);
+    }
 }
