--- a/pages/index.css
+++ b/pages/index.css
@@ -7,4 +7,5 @@
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/modal/modal.css);
 @import url(../blocks/form/form.css);
+@import url(../blocks/btn-animate/btn-animate.css);
 @import url(../blocks/footer/footer.css);
