--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -9,14 +9,13 @@
 @import url(../form/__label/form__label.css);
 @import url(../form/__title/form__title.css);
 @import url(../form/__label/form__label.css);
-
 .form {
-    display: block;
+    display: none;
     position: fixed;
     height: 100%;
     width: 100%;
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, .7);
-    visibility: visible;
+    z-index: 1;
 }
