--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,16 +1,20 @@
+@import url(./_opened/popup_opened.css);
 .popup {
-    display: block;
+    display: flex;
     position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(255, 255, 255);
     top: 0;
     left: 0;
-    color: black;
-    opacity: 0;
+    background: #000;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    justify-content: center;
+    align-items: center;
+    visibility: visible;
 }
 
-.popup_opened {
-    visibility: visible;
-    opacity: 1;
+.popup:after {
+    display: block;
+    content: "";
+    clear: both;
 }
