--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,4 +2,11 @@
     background: url(/images/logo.svg);
     width: 173px;
     height: 33px;
+    margin-bottom: 41px;
+}
+
+@media screen and (max-width: 480px) {
+    .header__logo {
+        margin-left: 27px;
+    }
 }
