--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -15,8 +15,10 @@
     padding: 0;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 480px) {
     .profile {
         flex-direction: column;
+        align-items: center;
+        position: relative;
     }
 }
