--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,7 +6,6 @@
 
 @media screen and (max-width: 480px) {
     .footer {
-        margin-top: 48px;
-        margin-bottom: 36px;
+        margin: 48px auto;
     }
 }
