--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,6 +6,6 @@
     min-width: 320px;
     max-width: 880px;
     height: 74px;
-    margin: 45px 200px 40px;
+    margin: 45px auto 40px;
     border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
