--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -11,9 +11,10 @@
     padding: 14px 16px;
     cursor: pointer;
     right: 0;
+    order: 3;
 }
 
-@media screen and (max-width: 425px){
+@media screen and (max-width: 480px){
     .profile__add-button {
       width: 100%;
       margin-top: 30px;
