--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -2,10 +2,5 @@
     width: 120px;
     height: 120px;
     border-radius: 50%;
-}
-
-@media screen and (max-width: 425px) {
-    .profile__avatar {
-        margin: auto;
-    }
+    order: 1;
 }
