--- a/blocks/profile/__data/profile__data.css
+++ b/blocks/profile/__data/profile__data.css
@@ -3,4 +3,13 @@
     flex-direction: column;
     font-weight: 500;
     margin: auto 0 auto 0;
+    order: 2;
+}
+
+@media screen and (max-width: 480px) {
+    .profile__data {
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+    }
 }
