--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,9 +8,11 @@
     color: white;
     cursor: pointer;
     background-size: 10px 10px, cover;
-  }
+    margin: 30px 0;
+    order: 2;
+}
 
-  @media screen and (max-width: 425px) {
+  @media screen and (max-width: 480px) {
     .profile__edit-button {
       height: 5.25px;
       width: 5.25px;
