--- a/blocks/cards/__container/cards__container.css
+++ b/blocks/cards/__container/cards__container.css
@@ -1,4 +1,4 @@
-.elements__container {
+.cards__container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
     grid-gap: 18px;
