--- a/pages/index.css
+++ b/pages/index.css
@@ -3,8 +3,8 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/profile/profile.css);
-@import url(../blocks/element/element.css);
-@import url(../blocks/elements/elements.css);
+@import url(../blocks/card/card.css);
+@import url(../blocks/cards/cards.css);
 @import url(../blocks/modal/modal.css);
 @import url(../blocks/form/form.css);
 @import url(../blocks/btn-animate/btn-animate.css);
