--- a/blocks/card/__button/card__button.css
+++ b/blocks/card/__button/card__button.css
@@ -1,5 +1,5 @@
-.card__heart {
-    background: url(/images/heart.svg) no-repeat;
+.card__button {
+    background: url(/images/button.svg) no-repeat;
     margin: 0;
     padding: 0;
     width: 20.76px;
@@ -9,12 +9,12 @@
     cursor: pointer;
 }
 
-.card__heart:hover {
+.card__button:hover {
     opacity: 0.2;
 }
 
-.card__heart:active {
-    background: url(/images/black-heart.svg) no-repeat;
+.card__button:active {
+    background: url(/images/black-button.svg) no-repeat;
     opacity: 100;
     border: none;
 }
