--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -10,7 +10,7 @@
     overflow: auto;
     justify-content: center;
     align-items: center;
-    visibility: visible;
+    visibility: hidden;
 }
 
 .popup:after {
