--- a/pages/index.css
+++ b/pages/index.css
@@ -3,9 +3,9 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/profile/profile.css);
-@import url(../blocks/card/card.css);
 @import url(../blocks/cards/cards.css);
-@import url(../blocks/modal/modal.css);
+@import url(../blocks/card/card.css);
 @import url(../blocks/form/form.css);
+@import url(../blocks/popup/popup.css);
 @import url(../blocks/btn-animate/btn-animate.css);
 @import url(../blocks/footer/footer.css);
