--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,20 +1,1 @@
-@import url(./_opened/popup_opened.css);
-.popup {
-    display: flex;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: #000;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    justify-content: center;
-    align-items: center;
-    visibility: hidden;
-}
-
-.popup:after {
-    display: block;
-    content: "";
-    clear: both;
-}
+@import url(./_open/popup_open.css);
