Updated Form CSS

--- a/blocks/form/__input_type_description/form__input_type_description.css
+++ b/blocks/form/__input_type_description/form__input_type_description.css
@@ -6,7 +6,8 @@
     border: none;
     font-weight: normal;
     border-bottom: 1px solid #000;
-    margin-bottom: auto;
+    margin: 29.74px 0 0;
+    padding: 0;
 }
 
 @media screen and (max-width: 480px) {
