--- a/blocks/form/__input_type_name/form__input_type_name.css
+++ b/blocks/form/__input_type_name/form__input_type_name.css
@@ -5,6 +5,7 @@
     font-size: 14px;
     line-height: 16.94px;
     border-bottom: 1px solid #000;
+    margin-top: 54px;
 }
 
 @media screen  and (max-width: 480px) {
