--- a/blocks/modal/__btn-close/modal__btn-close.css
+++ b/blocks/modal/__btn-close/modal__btn-close.css
@@ -1,4 +1,4 @@
-.form__btn-close {
+.modal__btn-close {
     width: 40px;
     height: 40px;
     display: flex;
@@ -12,7 +12,7 @@
 }
 
 @media screen and (max-width: 480px) {
-    .form__btn-close {
+    .modal__btn-close {
         width: 26px;
         height: 26px;
         background-size: contain;
