--- a/blocks/modal/__container/modal__container.css
+++ b/blocks/modal/__container/modal__container.css
@@ -1,4 +1,4 @@
-.form__container {
+.modal__container {
     display: flex;
     flex-direction: column;
     position: relative;
@@ -16,7 +16,7 @@
 }
 
 @media screen and (max-width: 480px) {
-    .form__container {
+    .modal__container {
         width: 75%;
         height: min-content;
         margin-top: 50%;
