--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -1,6 +1,6 @@
 @import url(/blocks/modal/__container/modal__container.css);
 .modal {
-    display: block;
+    display: none;
     position: fixed;
     height: 100%;
     width: 100%;
