--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -13,9 +13,10 @@
 }
 
 @media screen and (max-width: 480px) {
-  .profile__title {
+  .profile__name {
     font-size: 22px;
     line-height: 26.63px;
     max-width: 196px;
+    margin: 0;
   }
 }
