--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -1,16 +1,14 @@
 .profile__container {
     display: flex;
-    justify-content: space-between;
-    max-width: 428px;
-    align-items: flex-start;
-    flex-basis: 100%;
+    width: 100%;
+    height: 100%;
     text-align: left;
     margin: 0;
 }
 
 @media screen and (max-width: 480px) {
     .profile__container {
-        flex-direction: column wrap;
+        flex-direction: column;
         align-items: center;
         position: relative;
     }
