--- a/blocks/profile/__data/profile__data.css
+++ b/blocks/profile/__data/profile__data.css
@@ -3,13 +3,12 @@
     flex-direction: column;
     font-weight: 500;
     margin: auto 0 auto 0;
-    order: 2;
 }
 
 @media screen and (max-width: 480px) {
     .profile__data {
         flex-direction: column;
         align-items: center;
-        position: relative;
+        margin: 30px 0 0;
     }
 }
