--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -9,15 +9,18 @@
     cursor: pointer;
     background-size: 10px 10px, cover;
     margin: 30px 0;
-    order: 2;
 }
 
   @media screen and (max-width: 480px) {
     .profile__edit-button {
-      height: 5.25px;
-      width: 5.25px;
-      margin-right: 0;
+      position: absolute;
       background-size: 7px;
-      margin-top: 3px;
+      height: 18px;
+      width: 18px;
+      padding: 2px;
+      margin: 0;
+      right: 0;
+      top: 53%;
+      left: 85%;
     }
   }
