--- a/src/blocks/profile/__add-button/profile__add-button.css
+++ b/src/blocks/profile/__add-button/profile__add-button.css
@@ -1,6 +1,6 @@
 .profile__add-button {
     position: absolute;
-    background: url(/images/add-button.svg) center no-repeat;
+    background: url(../../../images/add-button.svg) center no-repeat;
     color: #fff;
     width: 150px;
     height: 50px;
