--- a/src/blocks/card/__title/card__title.css
+++ b/src/blocks/card/__title/card__title.css
@@ -1,6 +1,7 @@
 .card__title {
     font-size: 24px;
     line-height: 29.05px;
+    font-weight: 900;
     color: #000;
     margin: 0;
     padding: 0;
