--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -1,5 +1,5 @@
 .header__logo {
-    background: url(/images/logo.svg);
+    background: url(../../../images/logo.svg);
     width: 173px;
     height: 33px;
     margin-bottom: 41px;
