--- a/src/blocks/modal/modal.css
+++ b/src/blocks/modal/modal.css
@@ -1,4 +1,4 @@
-@import url(/blocks/modal/__container/modal__container.css);
+@import url(../modal/__container/modal__container.css);
 .modal {
     position: fixed;
     height: 100%;
