--- a/blocks/form/__input/_type/form__input_type_description.css
+++ b/blocks/form/__input/_type/form__input_type_description.css
@@ -5,7 +5,7 @@
     width: 100%;
     border: none;
     font-weight: normal;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
     margin: 29.74px 0 0;
     padding: 0;
 }
