--- a/blocks/form/__input/_type/form__input_type_name.css
+++ b/blocks/form/__input/_type/form__input_type_name.css
@@ -4,7 +4,7 @@
     width: 100%;
     font-size: 14px;
     line-height: 16.94px;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
     margin-top: 54px;
 }
 
