--- a/blocks/modal/__container/modal__container.css
+++ b/blocks/modal/__container/modal__container.css
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    margin: auto;
-    margin-top: 30vh;
+    margin: 30vh auto;
     border-radius: 10px;
     height: min-content;
     max-height: 330px;
@@ -17,7 +16,6 @@
 @media screen and (max-width: 480px) {
     .modal__container {
         width: 75%;
-        height: min-content;
         margin-top: 50%;
         padding: 30px 20px;
     }
