--- a/blocks/card/__button/card__button.css
+++ b/blocks/card/__button/card__button.css
@@ -1,6 +1,6 @@
 .card__button {
     background: url(../../../images/heart.svg) no-repeat;
-    margin: 0;
+    margin: 31px 18.24px 29.87px;
     padding: 0;
     width: 20.76px;
     height: 18.13px;
