--- a/blocks/card/__label/card__label.css
+++ b/blocks/card/__label/card__label.css
@@ -1,5 +1,5 @@
 .card__label {
-    padding: 15px 15px;
-    background: #fff;
+    padding: 25px 15px 31px 21px;
     border-radius: 0 0 5px 5px;
+    margin: 0;
 }
