--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -10,5 +10,6 @@
   padding: 0;
   background-color: #fff;
   background-size: 100% auto;
-  max-width: 282px;
+  width: 282px;
+  height: 361px;
 }
