--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,11 +1,23 @@
 @import url(../footer/__copyright/footer__copyright.css);
-
 .footer {
-    margin: 66px 200px 60px;
-}
-
-@media screen and (max-width: 480px) {
+    padding-top: 66px;
+    padding-bottom: 60px;
+    max-width: 882px;
+    margin: auto;
+  }
+  
+  @media screen and (max-width: 1024px) {
     .footer {
-        margin: 48px auto;
+      padding-right: 48px;
+      padding-left: 48px;
     }
-}
+  }
+  
+  @media screen and (max-width: 480px) {
+    .footer {
+      padding-top: 48px;
+      padding-bottom: 36px;
+      padding-right: 19px;
+      padding-left: 19px;
+    }
+  }
