--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,13 +1,15 @@
 .footer__copyright {
+    font-weight: normal;
     font-size: 18px;
-    line-height: 21.78px;
+    line-height: 22px;
     color: #545454;
-    margin: auto;
-    font-weight: 400;
-}
-
-@media screen and (max-width: 480px) {
+    margin: 0;
+    padding: 0;
+  }
+  
+  @media screen and (max-width: 480px) {
     .footer__copyright {
-        max-width: 282px;
+      font-size: 14px;
+      line-height: 16.94px;
     }
-}
+  }
