--- a/blocks/form/__input/_type/form__input_type_description.css
+++ b/blocks/form/__input/_type/form__input_type_description.css
@@ -1,13 +1,13 @@
 .form__input_type_description {
     font-size: 14px;
-    line-height: 17px;
+    line-height: 16.94px;
     padding-bottom: 8px;
     width: 100%;
     border: none;
     font-weight: normal;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
     margin: 29.74px 0 0;
-    padding: 0;
+    padding-bottom: 13.34px;
 }
 
 @media screen and (max-width: 480px) {
