--- a/blocks/form/__input/_type/form__input_type_name.css
+++ b/blocks/form/__input/_type/form__input_type_name.css
@@ -6,6 +6,7 @@
     line-height: 16.94px;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
     margin-top: 54px;
+    padding-bottom: 13.26px;
 }
 
 @media screen  and (max-width: 480px) {
