--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,23 +1,23 @@
 .profile__add-button {
-    position: absolute;
+    position: relative;
     background: url(../../../images/add-button.svg) center no-repeat;
     color: #fff;
-    width: 150px;
+    max-width: 282px;
+    min-width: 150px;
     height: 50px;
     border: 2px solid #fff;
-    margin: 35px 0px 35px;
+    margin: 35px 0 0 65px;
     background-size: 22px 22px;
     border-radius: 2px;
-    padding: 14px 16px;
+    padding: 14px 64px;
     cursor: pointer;
-    right: 0;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 770px) {
     .profile__add-button {
-        width: 100%;
         bottom: 0;
         background-size: 16px 16px;
-        margin: 0;
+        margin: 36px 19px 0;
+        width: 100%;
     }
 }
