--- a/blocks/profile/__data/profile__data.css
+++ b/blocks/profile/__data/profile__data.css
@@ -2,10 +2,10 @@
     display: flex;
     flex-direction: column;
     font-weight: 500;
-    margin: auto 0 auto 0;
+    margin: 22px 0;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 700px)  {
     .profile__data {
         align-items: center;
         margin: 30px 0 0;
