--- a/blocks/form/__save-button/form__save-button.css
+++ b/blocks/form/__save-button/form__save-button.css
@@ -1,6 +1,7 @@
 .form__save-button {
     color: #fff;
     background-color: #000;
+    height: 50.15px;
     width: 100%;
     margin-top: 48px;
     border-radius: 2px;
@@ -12,13 +13,11 @@
     border: none;
 }
 
-.form__save-button:hover {
-    opacity: 0.7;
-}
-
 @media screen and (max-width: 480px) {
     .form__save-button {
         font-size: 14px;
         line-height: 17px;
+        height: 46px;
+        margin-top: 45px;
     }
 }
