--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,4 +1,4 @@
-@import url(../cards/__container/cards__container.css);
+@import url(./__container/cards__container.css);
 .cards {
   padding-top: 47px;
   padding-bottom: 0;
