--- a/blocks/form/__input/_type/form__input_type_name.css
+++ b/blocks/form/__input/_type/form__input_type_name.css
@@ -1,17 +1,10 @@
 .form__input_type_name {
-    font-weight: normal;
-    border: none;
-    width: 100%;
-    font-size: 14px;
-    line-height: 16.94px;
-    border-bottom: 1px solid rgba(0, 0, 0, .2);
     margin-top: 54px;
     padding-bottom: 13.26px;
 }
 
-@media screen  and (max-width: 480px) {
-    .form__input_type_name{
-        font-size: 12px;
-        line-height: 15px;
+@media screen and (max-width: 480px) {
+    .form__input_type_name {
+        margin-top: 75px;
     }
 }
