--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -5,3 +5,10 @@
     line-height: 29.05px;
     margin: 0;
 }
+
+@media screen  and (max-width: 480px) {
+    .form__title {
+        font-size: 18px;
+        line-height: 21.78px;
+    }
+}
