--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,4 +1,5 @@
-@import url(../form/__title/form__title.css);
-@import url(../form/__input/_type/form__input_type_name.css);
-@import url(../form/__input/_type/form__input_type_description.css);
-@import url(../form/__save-button/form__save-button.css);
+@import url(./__title/form__title.css);
+@import url(./__input/form__input.css);
+@import url(./__input/_type/form__input_type_name.css);
+@import url(./__input/_type/form__input_type_description.css);
+@import url(./__save-button/form__save-button.css);
