--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,4 @@
-@import url(../header/__logo/header__logo.css);
+@import url(./__logo/header__logo.css);
 .header {
     display: flex;
     position: relative;
