--- a/blocks/modal/__btn-close/modal__btn-close.css
+++ b/blocks/modal/__btn-close/modal__btn-close.css
@@ -1,12 +1,12 @@
 .modal__btn-close {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     display: flex;
     position: absolute;
-    top: -40px;
-    right: -40px;
+    top: -42px;
+    right: -42px;
     background: url(../../../images/close-icon.svg) center no-repeat;
-    background-size: contain;
+    background-size: cover;
     float: right;
     background-color: rgba(0, 0, 0, 0);
     border: none;
@@ -15,10 +15,9 @@
 
 @media screen and (max-width: 480px) {
     .modal__btn-close {
-        height: 42px;
-        width: 42px;
+        height: 40px;
+        width: 40px;
         top: -50px;
-        right: -5px;
-        padding: 0;
+        right: -10px;
     }
 }
