--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,7 +1,6 @@
 .profile__description {
-    margin: 0 0 0 30px;
+    margin: 0;
     padding: 0;
-    max-width: 400px;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -15,5 +14,6 @@
     .profile__description {
         margin: 14px 0 0;
         align-self: center;
+        width: 196px;
     }
 }
