--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -2,7 +2,7 @@
   font-size: 42px;
   line-height: 48px;
   padding: 0;
-  margin: 0 30px 18px;
+  margin: 0 0 18px;
   font-weight: 500;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -14,5 +14,6 @@
     font-size: 22px;
     line-height: 26.63px;
     margin: 0;
+    width: 196px;
   }
 }
