--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -13,7 +13,7 @@
 @media screen and (max-width: 700px)  {
     .profile__description {
         margin: 14px 0 0;
-        align-self: center;
+        text-align: center;
         width: 196px;
     }
 }
