--- a/blocks/cards/__list/cards__list.css
+++ b/blocks/cards/__list/cards__list.css
@@ -1,4 +1,4 @@
-.cards__container {
+.cards__list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
     grid-gap: 18px;
