--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -2,4 +2,6 @@
 @import url(./__input/form__input.css);
 @import url(./__input/_type/form__input_type_name.css);
 @import url(./__input/_type/form__input_type_description.css);
+@import url(./__input/_type/form__input_type_title.css);
+@import url(./__input/_type/form__input_type_url.css);
 @import url(./__save-button/form__save-button.css);
