--- a/blocks/popup/__btn-close/popup__btn-close.css
+++ b/blocks/popup/__btn-close/popup__btn-close.css
@@ -1,4 +1,4 @@
-.modal__btn-close {
+.popup__btn-close {
     width: 50px;
     height: 50px;
     display: flex;
@@ -14,7 +14,7 @@
 }
 
 @media screen and (max-width: 480px) {
-    .modal__btn-close {
+    .popup__btn-close {
         height: 40px;
         width: 40px;
         top: -50px;
