--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,4 +1,4 @@
-.modal__container {
+.popup__container {
     display: flex;
     flex-direction: column;
     position: relative;
@@ -14,7 +14,7 @@
 }
 
 @media screen and (max-width: 480px) {
-    .modal__container {
+    .popup__container {
         width: 75%;
         margin-top: 50%;
         padding: 25px 22px;
