--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,8 +1,9 @@
 .card__image {
     overflow: hidden;
-    width: 282px;
+    width: 100%;
     height: 282px;
     margin: 0;
     padding: 0;
     border-radius: 10px 10px 0 0;
+    background-size: cover;
 }
