--- a/blocks/popup/__image/popup__image.css
+++ b/blocks/popup/__image/popup__image.css
@@ -1,8 +1,4 @@
 .popup__image {
-    position: relative;
-    margin: 0;
-    padding: 0;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%);
+    max-width: 75vw;
+    max-height: 75vh;
 }
