--- a/blocks/card/__delete-button/card__delete-button.css
+++ b/blocks/card/__delete-button/card__delete-button.css
@@ -9,3 +9,8 @@
 	background-color: rgba(0, 0, 0, 0);
 	border: none;
 }
+
+.card__delete-button:hover  {
+    opacity: 0.3;
+    cursor: pointer;
+}
