--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -5,3 +5,4 @@
 @import url(./__input/_type/form__input_type_title.css);
 @import url(./__input/_type/form__input_type_url.css);
 @import url(./__save-button/form__save-button.css);
+@import url(./__input/_type/form__input_type_error.css);
