--- a/blocks/popup/__btn-close/popup__btn-close.css
+++ b/blocks/popup/__btn-close/popup__btn-close.css
@@ -11,6 +11,12 @@
     background-color: rgba(0, 0, 0, 0);
     border: none;
     padding: 0;
+    transition: opacity .3s linear;
+}
+
+.popup__btn-close:hover {
+    opacity: .6;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 480px) {
