--- a/blocks/form/__save-button/form__save-button.css
+++ b/blocks/form/__save-button/form__save-button.css
@@ -11,6 +11,12 @@
     text-align: center;
     font-weight: normal;
     border: none;
+    transition: opacity .3s linear;
+}
+
+.form__save-button:hover {
+    opacity: .6;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 480px) {
