--- a/pages/index.css
+++ b/pages/index.css
@@ -13,4 +13,5 @@
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__image-title/popup__image-title.css);
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__error/popup__error.css);
 @import url(../blocks/popup/_is-opened/popup_is-opened.css);
