--- a/blocks/card/__delete-button/card__delete-button.css
+++ b/blocks/card/__delete-button/card__delete-button.css
@@ -1,5 +1,5 @@
 .card__delete-button {
-    background: url(../../../images/trash.svg) center no-repeat;
+    background: url(../../../src/images/trash.svg) center no-repeat;
     position: absolute;
 	right: 15px;
 	top: 15px;
