--- a/blocks/card/__like-button_active/card__like-button_active.css
+++ b/blocks/card/__like-button_active/card__like-button_active.css
@@ -1,4 +1,4 @@
 .card__like-button_active {
-    background: url(../../../images/black-heart.svg) no-repeat;
+    background: url(../../../src/images/black-heart.svg) no-repeat;
     opacity: 1;
 }
