Updated Style Path

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,17 +1,17 @@
-@import url(../vendor/normalize.css);
-@import url(../vendor/fonts/fonts.css);
-@import url(../blocks/page/page.css);
-@import url(../blocks/header/header.css);
-@import url(../blocks/profile/profile.css);
-@import url(../blocks/cards/cards.css);
-@import url(../blocks/card/card.css);
-@import url(../blocks/form/form.css);
-@import url(../blocks/footer/footer.css);
-@import url(../blocks/popup/__btn-close/popup__btn-close.css);
-@import url(../blocks/popup/__container/popup__container.css);
-@import url(../blocks/popup/__image-container/popup__image-container.css);
-@import url(../blocks/popup/__image/popup__image.css);
-@import url(../blocks/popup/__image-title/popup__image-title.css);
-@import url(../blocks/popup/popup.css);
-@import url(../blocks/popup/__error/popup__error.css);
-@import url(../blocks/popup/_is-opened/popup_is-opened.css);
+@import url(../../vendor/normalize.css);
+@import url(../fonts/fonts.css);
+@import url(../../blocks/page/page.css);
+@import url(../../blocks/header/header.css);
+@import url(../../blocks/profile/profile.css);
+@import url(../../blocks/cards/cards.css);
+@import url(../../blocks/card/card.css);
+@import url(../../blocks/form/form.css);
+@import url(../../blocks/footer/footer.css);
+@import url(../../blocks/popup/__btn-close/popup__btn-close.css);
+@import url(../../blocks/popup/__container/popup__container.css);
+@import url(../../blocks/popup/__image-container/popup__image-container.css);
+@import url(../../blocks/popup/__image/popup__image.css);
+@import url(../../blocks/popup/__image-title/popup__image-title.css);
+@import url(../../blocks/popup/popup.css);
+@import url(../../blocks/popup/__error/popup__error.css);
+@import url(../../blocks/popup/_is-opened/popup_is-opened.css);
